# advent-of-code-2022

./: Cargo.toml
.github/workflows/: rust.yml
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  util.rs
