[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version="0.4.1", features = ["bench"]}

[profile.release]
lto = true
codegen-units = 1
debug = false
